# brekkie.ai

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  fly.staging.toml  fly.toml  render.yaml
backend/: .dockerignore  .env.example  README.md  format.py  pyproject.toml  pytest.ini  run_e2e_tests.py  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 11d1b10382cf_initial_schema.py  4cfbb1ce5505_initial_schema.py  6a9a4a309b09_add_email_name_and_last_signed_in_at_.py  781a8252ecfe_add_parent_id_to_message_schema.py  7e0174d7f363_replace_email_name_password_with_.py  7f91cd49ab52_add_ip_address_and_safety_guard_to_.py  8bd58f88db27_add_index_for_user_email_and_external_id.py
backend/src/: main.py
backend/src/ai/: main.py
backend/src/ai/workflow/: agent.py  (+2 more)
backend/src/api/: deps.py  main.py
backend/src/config/: settings.py
backend/src/database/: checkpointer.py  index.py  schema.py
backend/src/repositories/: message_repository.py  recipe_repository.py  thread_repository.py  user_repository.py
backend/src/schemas/: api_error.py  chat_session_data_stream.py  chat_session_errors.py  conversation_stream_events.py  conversation_stream_state.py  message_content_type.py  message_role.py  messages.py  recipes.py  safety_guards.py  threads.py  user_access.py  users.py
backend/src/services/: service_container.py  websocket_event_sender.py
backend/src/utils/: date_utils.py  logger.py  password.py
backend/src/worker/: chat_session_data_stream_processor_worker.py
backend/tests/: test_database_integration.py
backend/tests/ai/: test_agent_workflow_llm_integration.py  test_ai_food_agent.py
backend/tests/config/: test_settings.py
backend/tests/db_migrations/: conftest.py  test_langgraph_tables_preserved.py  test_migration_message_parent_id.py
backend/tests/e2e/: conftest.py  test_chat_session_data_stream_processor_integration.py  test_create_anonymous_access.py  test_ensure_access.py  test_ensure_access_token.py  test_login.py  test_logout.py  test_real_chat_flow.py  test_reset_access.py  test_revoke_access.py  test_session_timeout_and_resume.py  test_signup.py  test_signup_integration.py  test_threads.py  test_verify_jwt.py  test_verify_token.py
backend/tests/repositories/: conftest.py  test_message_repository.py  test_recipe_repository.py  test_thread_repository.py  test_user_repository.py
backend/tests/services/: test_ai_food_agent.py  test_websocket_event_sender.py
backend/tests/test_helpers/: assert_deep_equal.py
(+176 files in other folders)
